<resources>
    <string name="app_name">WO5</string>
    <string name="signal_strenght">Signal Strenght</string>
    <string name="thp_test">THP Test</string>
    <string name="entrar">Entrar</string>
    <string name="compromisso">Compromisso</string>
    <string name="n_s_avaliar">Nós avaliaremos os níveis e as taxas de sua conexão com a rede,
        dados sensíveis não serão coletados.</string>
    <string name="todo">TODO</string>
    <string name="executar_teste">Executar Teste</string>
    <string name="sobre_n_s">Sobre nós</string>
    <string name="n_s_avaliaremos_os_n_veis_e_as_taxas_de_sua_conex_o_com_a_rede_dados_sens_veis_n_o_ser_o_coletados">Nós avaliaremos os níveis e as taxas de sua conexão com a rede, dados sensíveis não serão coletados.</string>
    <string name="acessar">Acessar</string>
    <string name="n_o_tem_cad">Não tem cadastro?</string>
    <string name="quero_receber_relat_rios_e_informa_es_relevantes">Quero receber relatórios e informações relevantes.</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="digite_sua_senha_novamente">Confirme a Senha:</string>
    <string name="digite_sua_senha">Senha:</string>
    <string name="digite_seu_email">Email:</string>
    <string name="digite_seu_nome">Nome:</string>
    <string name="imagem_logo_texto">Imagem logo texto</string>
    <string name="resultado">Resultado</string>
    <string name="upload">Upload</string>
    <string name="qualidade">Qualidade</string>
    <string name="_000_00">000,00</string>
    <string name="intensidade">Intensidade</string>
    <string name="_12">12</string>
    <string name="ms">ms</string>
    <string name="lat_ncia">Latência</string>
    <string name="_98">98</string>
    <string name="mbps">Mbps</string>
    <string name="download">Download</string>
    <string name="_15">15</string>
    <string name="velocimetro">Velocimetro</string>
    <string name="excelente">Excelente</string>
    <string name="Indefinido">-</string>
    <string name="sair">Sair</string>
    <string name="antenna">Antenna</string>
    <string name="dashboard">Dashboard</string>
    <string name="admin">Admin</string>
    <string name="config">Config</string>
    <string name="user">User</string>
</resources>
