<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/checkBoxReceber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:buttonTint="#37749F"
        android:checked="false"
        android:contextClickable="false"
        android:fontFamily="@font/inter_regular"
        android:text="@string/quero_receber_relat_rios_e_informa_es_relevantes"
        android:textColor="#666666"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCadastrar"
        app:layout_constraintStart_toStartOf="@+id/buttonCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/buttonCadastrar" />

    <TextView
        android:id="@+id/textViewAcesso"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_semi_bold"
        android:lineHeight="36sp"
        android:text="@string/acessar"
        android:textAlignment="center"
        android:textColor="#001638"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_bg"
        android:fontFamily="@font/inter_medium"
        android:textColor="#BDBDBD"
        android:textAlignment="center"
        android:textSize="16sp"
        android:hint="@string/digite_seu_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="@+id/textViewAcesso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAcesso" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_bg"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/digite_sua_senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#BDBDBD"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_button_prim"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/entrar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_button_prim"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/cadastrar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEsqueceu" />

    <TextView
        android:id="@+id/textViewEsqueceu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="Esqueceu sua senha?"
        android:textAlignment="center"
        android:textColor="#37749F"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCadastrar"
        app:layout_constraintStart_toStartOf="@+id/buttonCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntrar" />

    <ProgressBar
        android:id="@+id/progressBarEntrar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminateTint="#37749F"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonCadastrar"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/buttonCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReceber" />

    <Button
        android:id="@+id/buttonRecuperarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_button_prim"
        android:fontFamily="@font/inter_semi_bold"
        android:text="Recuperar Senha"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>